--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,10 @@
+[metadata]
+description-file = README.md
+
 [bdist_wheel]
 universal=1
 
 [pypitools]
-method = gemfury
+method = twine
 clean_before = True
 clean_after = True
-gemfury_user = twiggle-company
