--- a/.mypy.ini
+++ b/.mypy.ini
@@ -7,7 +7,19 @@ disable_error_code = annotation-unchecked
 # ignore_missing_imports = True
 
 # Third party libraries
+[mypy-gdata.*]
+ignore_missing_imports = True
+
+[mypy-google.auth.*]
+ignore_missing_imports = True
+
+[mypy-google_auth_oauthlib.*]
+ignore_missing_imports = True
+
 [mypy-boto3.*]
+ignore_missing_imports = True
+
+[mypy-svgwrite.*]
 ignore_missing_imports = True
 
 [mypy-sultan.*]
