--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,63 @@
 alabaster==0.7.16
-astroid==3.0.3
+astroid==3.2.2
 attrs==23.2.0
-Babel==2.14.0
-boto3==1.34.48
-botocore==1.34.48
-certifi==2024.2.2
+Babel==2.15.0
+boto3==1.34.117
+botocore==1.34.117
+certifi==2024.6.2
 charset-normalizer==3.3.2
-coverage==7.4.2
+coverage==7.5.3
 dill==0.3.8
 docker-py==1.10.6
 docker-pycreds==0.4.0
-docutils==0.20.1
+docutils==0.21.2
 flake8==7.0.0
 furl==2.1.3
 gitdb==4.0.11
-GitPython==3.1.42
-idna==3.6
+GitPython==3.1.43
+idna==3.7
 imagesize==1.4.1
 iniconfig==2.0.0
 isort==5.13.2
-Jinja2==3.1.3
+Jinja2==3.1.4
 jmespath==1.0.1
-jsonschema==4.21.1
+jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
-logging-tree==1.9
-Mako==1.3.2
+logging_tree==1.10
+Mako==1.3.5
 MarkupSafe==2.1.5
 mccabe==0.7.0
-mypy==1.8.0
+mypy==1.10.0
 mypy-extensions==1.0.0
 orderedmultidict==1.0.1
-packaging==23.2
-platformdirs==4.2.0
-pluggy==1.4.0
-pyapikey==0.0.9
+packaging==24.0
+platformdirs==4.2.2
+pluggy==1.5.0
+pyapikey==0.0.11
 pyclassifiers==0.0.12
 pycodestyle==2.11.1
-pydmt==0.3.5
+pydmt==0.3.16
 pyfakeuse==0.0.8
 pyflakes==3.2.0
-Pygments==2.17.2
-pylint==3.0.3
+Pygments==2.18.0
+pylint==3.2.2
 pylogconf==0.0.37
 pymakehelper==0.0.28
 pymount==0.0.10
 pypipegzip==0.0.23
-pytconf==0.1.12
-pytest==8.0.1
-pytest-cov==4.1.0
-python-dateutil==2.8.2
+pytconf==0.1.14
+pytest==8.2.1
+pytest-cov==5.0.0
+python-dateutil==2.9.0.post0
 PyYAML==6.0.1
-referencing==0.33.0
-requests==2.31.0
-rpds-py==0.18.0
-s3transfer==0.10.0
+referencing==0.35.1
+requests==2.32.3
+rpds-py==0.18.1
+s3transfer==0.10.1
 six==1.16.0
 smmap==5.0.1
 snowballstemmer==2.2.0
-Sphinx==7.2.6
+Sphinx==7.3.7
 sphinxcontrib-applehelp==1.0.8
 sphinxcontrib-devhelp==1.0.6
 sphinxcontrib-htmlhelp==2.0.5
@@ -66,13 +66,13 @@ sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 sultan==0.9.1
 termcolor==2.4.0
-tomlkit==0.12.3
-tqdm==4.66.2
-types-requests==2.31.0.20240218
-types-tqdm==4.66.0.20240106
-typing_extensions==4.9.0
-ujson==5.9.0
-urllib3==2.0.7
+tomlkit==0.12.5
+tqdm==4.66.4
+types-requests==2.32.0.20240602
+types-tqdm==4.66.0.20240417
+typing_extensions==4.12.1
+ujson==5.10.0
+urllib3==2.2.1
 venv-run==0.2.0
-websocket-client==1.7.0
+websocket-client==1.8.0
 yattag==1.15.2
