--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-alabaster==0.7.16
+alabaster==1.0.0
 astroid==3.2.4
-attrs==23.2.0
-Babel==2.15.0
-boto3==1.34.149
-botocore==1.34.149
+attrs==24.2.0
+babel==2.16.0
+boto3==1.35.7
+botocore==1.35.7
 certifi==2024.7.4
 charset-normalizer==3.3.2
-coverage==7.6.0
+coverage==7.6.1
 dill==0.3.8
 docker-py==1.10.6
 docker-pycreds==0.4.0
 docutils==0.21.2
-flake8==7.1.0
+flake8==7.1.1
 furl==2.1.3
 gitdb==4.0.11
 GitPython==3.1.43
-idna==3.7
+idna==3.8
 imagesize==1.4.1
 iniconfig==2.0.0
 isort==5.13.2
@@ -27,47 +27,47 @@ logging_tree==1.10
 Mako==1.3.5
 MarkupSafe==2.1.5
 mccabe==0.7.0
-mypy==1.11.0
+mypy==1.11.2
 mypy-extensions==1.0.0
 orderedmultidict==1.0.1
 packaging==24.1
 platformdirs==4.2.2
 pluggy==1.5.0
 pyapikey==0.0.11
-pyclassifiers==0.0.12
-pycodestyle==2.12.0
+pyclassifiers==0.0.13
+pycodestyle==2.12.1
 pydmt==0.3.16
 pyfakeuse==0.0.8
 pyflakes==3.2.0
 Pygments==2.18.0
 pylint==3.2.6
 pylogconf==0.0.37
-pymakehelper==0.0.28
+pymakehelper==0.0.30
 pymount==0.0.10
 pypipegzip==0.0.23
 pytconf==0.1.14
 pytest==8.3.2
 pytest-cov==5.0.0
 python-dateutil==2.9.0.post0
-PyYAML==6.0.1
+PyYAML==6.0.2
 referencing==0.35.1
 requests==2.32.3
-rpds-py==0.19.1
+rpds-py==0.20.0
 s3transfer==0.10.2
 six==1.16.0
 smmap==5.0.1
 snowballstemmer==2.2.0
-Sphinx==7.4.7
-sphinxcontrib-applehelp==1.0.8
-sphinxcontrib-devhelp==1.0.6
-sphinxcontrib-htmlhelp==2.0.6
+Sphinx==8.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.8
-sphinxcontrib-serializinghtml==1.1.10
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 sultan==0.9.1
 termcolor==2.4.0
-tomlkit==0.13.0
-tqdm==4.66.4
+tomlkit==0.13.2
+tqdm==4.66.5
 types-requests==2.32.0.20240712
 types-tqdm==4.66.0.20240417
 typing_extensions==4.12.2
@@ -75,4 +75,4 @@ ujson==5.10.0
 urllib3==2.2.2
 venv-run==0.2.0
 websocket-client==1.8.0
-yattag==1.15.2
+yattag==1.16.0
