--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 alabaster==1.0.0
-astroid==3.3.9
+astroid==3.3.10
 attrs==25.3.0
 babel==2.17.0
-boto3==1.37.23
-botocore==1.37.23
-certifi==2025.1.31
-charset-normalizer==3.4.1
-coverage==7.8.0
-dill==0.3.9
+boto3==1.38.26
+botocore==1.38.26
+certifi==2025.4.26
+charset-normalizer==3.4.2
+coverage==7.8.2
+dill==0.4.0
 docker-py==1.10.6
 docker-pycreds==0.4.0
 docutils==0.21.2
@@ -21,43 +21,44 @@ iniconfig==2.1.0
 isort==6.0.1
 Jinja2==3.1.6
 jmespath==1.0.1
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
 logging_tree==1.10
-Mako==1.3.9
+Mako==1.3.10
 MarkupSafe==3.0.2
 mccabe==0.7.0
-mypy==1.15.0
-mypy-extensions==1.0.0
+mypy==1.16.0
+mypy_extensions==1.1.0
 orderedmultidict==1.0.1
-packaging==24.2
-platformdirs==4.3.7
-pluggy==1.5.0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.6.0
 pyapikey==0.0.12
-pyclassifiers==0.0.15
+pyclassifiers==0.0.19
 pycodestyle==2.13.0
 pydmt==0.3.19
 pyfakeuse==0.0.9
-pyflakes==3.3.1
+pyflakes==3.3.2
 Pygments==2.19.1
-pylint==3.3.6
+pylint==3.3.7
 pylogconf==0.0.38
-pymakehelper==0.0.35
+pymakehelper==0.0.37
 pymount==0.0.11
 pypipegzip==0.0.24
 pytconf==0.1.18
 pytest==8.3.5
-pytest-cov==6.0.0
+pytest-cov==6.1.1
 python-dateutil==2.9.0.post0
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.3
 roman-numerals-py==3.1.0
-rpds-py==0.24.0
-s3transfer==0.11.4
+rpds-py==0.25.1
+s3transfer==0.13.0
 six==1.17.0
 smmap==5.0.2
-snowballstemmer==2.2.0
+snowballstemmer==3.0.1
 Sphinx==8.2.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
@@ -66,14 +67,14 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 sultan==0.9.1
-termcolor==2.5.0
+termcolor==3.1.0
 tomlkit==0.13.2
 tqdm==4.67.1
-types-requests==2.32.0.20250328
-types-tqdm==4.67.0.20250319
-typing_extensions==4.13.0
+types-requests==2.32.0.20250515
+types-tqdm==4.67.0.20250516
+typing_extensions==4.13.2
 ujson==5.10.0
-urllib3==2.3.0
+urllib3==2.4.0
 venv-run==0.2.0
 websocket-client==1.8.0
 yattag==1.16.1
