--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ referencing==0.36.2
 requests==2.32.3
 roman-numerals-py==3.1.0
 rpds-py==0.25.1
+ruff==0.12.1
 s3transfer==0.13.0
 six==1.17.0
 smmap==5.0.2
