--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ astroid==3.3.10
 attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
-boto3==1.38.46
-botocore==1.38.46
+boto3==1.39.0
+botocore==1.39.0
 certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
@@ -60,9 +60,10 @@ platformdirs==4.3.8
 pluggy==1.6.0
 ptyprocess==0.7.0
 pyapikey==0.0.12
+pyclassifiers==0.0.20
 pycmdtools==0.0.85
 pycparser==2.22
-pydmt==0.3.24
+pydmt==0.3.25
 pyfakeuse==0.0.9
 Pygments==2.19.2
 pylint==3.3.7
